--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,5 +18,25 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  background-image: url(../assets/hulkpackers.gif);
+  color: white !important;
+  background-size: cover;
+  height: 100vh;
+  padding:0;
+  margin:0;
+}
+.profile-button {
+  background-color: rgb(34, 36, 36);
+  color: white;
+  margin: 30px;
+  border-radius: 20%;
+}
+.profile-card{
+  color:black;
+}
+.card-title{
+  color:black;
+}
+.form{
+  color:black;
 }
