--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,25 +1,30 @@
 @import 'bootstrap/dist/css/bootstrap.css';
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.copy-btn, h1, h3{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px rgb(236, 251, 21),
+      0 0 82px rgb(236, 251, 21),
+      0 0 92px rgb(236, 251, 21),
+      0 0 102px rgb(236, 251, 21),
+      0 0 151px rgb(236, 251, 21);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h1 {
+  font-size: 6.2rem;
+  animation: pulsate 0.7s ease-in-out infinite alternate;     
 }
-
-* {
-  box-sizing: border-box;
-}
-
 body {
   background-image: url(../assets/hulkpackers.gif);
   color: white !important;
+  background-position: center center;
+  background-attachment: fixed;
   background-size: cover;
   height: 100vh;
   padding:0;
@@ -31,12 +36,57 @@ body {
   margin: 30px;
   border-radius: 20%;
 }
-.profile-card{
+.card-title, .card-subtitle, .profile-card, .edit-btn{
   color:black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.card-title{
-  color:black;
-}
+
 .form{
+  background-color: rgb(56, 56, 56);
   color:black;
+  border: 1px solid yellow;
+  border-radius: 2%;
+  padding: 20px;
+  margin-top: 12%;
+}
+@keyframes pulsate {
+  100% {
+      text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px rgb(236, 251, 21),
+      0 0 80px rgb(236, 251, 21),
+      0 0 90px rgb(236, 251, 21),
+      0 0 100px rgb(236, 251, 21),
+      0 0 150px rgb(236, 251, 21);
+  
+  }
+  0% {
+    text-shadow:
+    0 0 4px #fff,
+    0 0 10px #fff,
+    0 0 18px #fff,
+    0 0 38px rgb(236, 251, 21),
+    0 0 73px rgb(236, 251, 21),
+    0 0 80px rgb(236, 251, 21),
+    0 0 94px rgb(236, 251, 21),
+    0 0 140px rgb(236, 251, 21);
+  }
+}
+.sign-out{
+  margin-right:5px;
+}
+.indCard{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+.player-cards{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  margin-top: 5%;
 }
