--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,14 +21,11 @@ h1 {
   animation: pulsate 0.7s ease-in-out infinite alternate;     
 }
 body {
-  background-image: url(../assets/hulkpackers.gif);
-  color: white !important;
-  background-position: center center;
-  background-attachment: fixed;
+  background: url(../assets/hulkpackers.gif)no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  height: 100vh;
-  padding:0;
-  margin:0;
 }
 .profile-button {
   background-color: rgb(34, 36, 36);
@@ -94,5 +91,4 @@ body {
   display:flex;
   flex-direction:column;
   color:black;
-  
 }
